--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </li>
         <h3>Barbie:Rapunzel</h3>
         <h4>By Cliff Ruby </h4>
-        <img src="https://m.media-amazon.com/images/I/91wouW0oFRL._SY466_.jpg"/>
+        <img width="200" src="https://m.media-amazon.com/images/I/91wouW0oFRL._SY466_.jpg"/>
         <p>Rapunzel is locked in a tower by an evil witch named Gothel.  She discovers a chest of magical paintbrushes and a hairbrush.  It allows her to exit the tower and finally visit the village, where she learns secrets about her parents. </p>
 </ol>
 </body>
